[package]
name = 'cennznet-nbns-runtime-wasm'
version = '1.0.0'
authors = ['Centrality Developers <support@centrality.ai>']
edition = '2018'

[lib]
name = "cennznet_nbns"
crate-type = ['cdylib']

[dependencies]
cennznet-nbns-runtime = { path = "..", default-features = false }

[features]
default = ["core"]
core = [
	"cennznet-nbns-runtime/core",
]
std = [
	"cennznet-nbns-runtime/std",
]

[profile.release]
panic = "abort"
lto = true

[workspace]
members = []
